--- a/main.ipynb
+++ b/main.ipynb
@@ -16,8 +16,8 @@
    ],
    "source": [
     "from game_of_life import Game_of_life\n",
-    "from autoencoder import ConvolutionalAutoencoder\n",
-    "from fullycon import CullyConnCoder\n",
+    "from convLife.models.autoencoder import ConvolutionalAutoencoder\n",
+    "from convLife.models.fullycon import CullyConnCoder\n",
     "\n",
     "import torch.nn as nn\n",
     "import torch\n",
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
