--- a/training/main.ipynb
+++ b/training/main.ipynb
@@ -281,6 +281,26 @@
     "    ax1.imshow(ins)\n",
     "    ax2.imshow(res)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Export onnx model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = generate_batch(5, SIZE, 8)\n",
+    "batch, next= generate_batch(5, SIZE, SIM_BATHC)\n",
+    "onnx_program = torch.onnx.dynamo_export(net, batch)\n",
+    "\n",
+    "onnx_program.save(\"GOL_model.onnx\")"
+   ]
   }
  ],
  "metadata": {
