actually dug up from archives

--- a/training/main.ipynb
+++ b/training/main.ipynb
@@ -16,8 +16,8 @@
    ],
    "source": [
     "from game_of_life import Game_of_life\n",
-    "from autoencoder import ConvolutionalAutoencoder\n",
-    "from fullycon import CullyConnCoder\n",
+    "from convLife.models.autoencoder import ConvolutionalAutoencoder\n",
+    "from convLife.models.fullycon import CullyConnCoder\n",
     "\n",
     "import torch.nn as nn\n",
     "import torch\n",
@@ -281,26 +281,6 @@
     "    ax1.imshow(ins)\n",
     "    ax2.imshow(res)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Export onnx model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out = generate_batch(5, SIZE, 8)\n",
-    "batch, next= generate_batch(5, SIZE, SIM_BATHC)\n",
-    "onnx_program = torch.onnx.dynamo_export(net, batch)\n",
-    "\n",
-    "onnx_program.save(\"GOL_model.onnx\")"
-   ]
   }
  ],
  "metadata": {
@@ -319,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
